style: 公开 API 的列表返回保持可变契约
Stream.toList() 返回不可变列表，对 public 方法的返回值属于收紧契约，
调用方若对结果 add/sort/clear 会在运行时抛 UnsupportedOperationException。
- ReflectUtils.getNonStaticFields（public 工具方法）
- LocalStorageStrategy.list（实现 StorageStrategy 接口）
这两处回退为 Collectors.toList()；其余 private/方法内只读的 toList() 保持不变。

Assisted-by: ZCode